Add pagination (3 articles per page)

--- a/my_blog/blog/templates/blog/post_list.html
+++ b/my_blog/blog/templates/blog/post_list.html
@@ -19,5 +19,7 @@
 
     <a href="{% url 'blog:post_create' %}">Add new post</a>
 
+    {% include "pagination.html" with page=page_obj %}
+
 {% endblock %}
 
