--- a/my_blog/blog/templates/blog/post_detail.html
+++ b/my_blog/blog/templates/blog/post_detail.html
@@ -4,6 +4,14 @@
 
   <h1>{{ post.title }}</h1>
 
+    <p class="tags">Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url "blog:tagged" tag.slug %}">{{ tag.name }}</a>
+                {% if not forloop.last %},
+                {% endif %}
+            {% endfor %}
+    </p>
+
   <p>{{ post.body|linebreaks }}</p>
   <p><strong>Author:</strong> <a href="">{{ post.author }}</a></p> <!-- author detail link not yet defined -->
   <p><strong>Publish:</strong> {{ post.publish }}</p>
