--- a/my_blog/blog/templates/blog/post_list.html
+++ b/my_blog/blog/templates/blog/post_list.html
@@ -1,20 +1,25 @@
 {#{% extends "base.html" %}#}
 
 {% block content %}
+
     <h2>Posts:</h2>
     <ul>
-
         {% for post in post_list %}
+{#      {% url 'blog:post_detail' pk=post.pk %}#}
+{#      {% url 'blog:post_detail' slug=post.slug %}#}
+        <li><a href="{{ post.get_absolute_url }}"> {{ post.title }} </a></li>
 
-{#            {% url 'blog:post_detail' pk=post.pk %}#}
-{#            {% url 'blog:post_detail' slug=post.slug %}#}
-            <li><a href="{{ post.get_absolute_url }}"> {{ post.title }} </a></li>
+            <p class="tags"> Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url "blog:tagged" tag.slug %}">{{ tag.name }}</a>
+                {% if not forloop.last %},
+                {% endif %}
+            {% endfor %}
+            </p>
 
         {% empty %}
             <p>There are no posts in the library.</p>
-
         {% endfor %}
-
     </ul>
 
     <a href="{% url 'blog:post_create' %}">Add new post</a>
