--- a/my_blog/blog/templates/blog/post_list.html
+++ b/my_blog/blog/templates/blog/post_list.html
@@ -1,4 +1,7 @@
-{#{% extends "base.html" %}#}
+{% extends "blog/base.html" %}
+{% load blog_tags %}
+
+{% block title %}Mój blog{% endblock %}
 
 {% block content %}
 
